vlib/v/checker/tests/inout/enum_err.out
vlib/v/checker/tests/inout/enum_err.v:2:13: error: default value for enum has to be an integer
    1| enum Color {
    2|     green = 'green',
                   ~~~~~~~
    3|     yellow = 1+1,
    4|     blue,
vlib/v/checker/tests/inout/enum_err.v:3:14: error: default value for enum has to be an integer
    1| enum Color {
    2|     green = 'green',
    3|     yellow = 1+1,
                    ~~~
    4|     blue,
    5| }