vlib/v/checker/tests/inout/enum_err.vv
enum Color {
    green = 'green',
    yellow = 1+1,
    blue,
}
